fix dropdown alignment of menu

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@
     box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
   */
     width: 100px;
+    text-align: right;
     display: none;
   }
   
